# powerbox

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
docs/: clients.md
powerbox/: __init__.py  cli.py  config.py  discovery.py  exporter.py  manifest.py  models.py  output_ops.py  paths.py  user_settings_example.py
systemd/: powerbox.service  powerbox.timer
